RET-6151 (#2687)
* Load of Checkstyle fixes in the unit tests

* All checkstyle issues in unit tests fixed