@@ -34,15 +34,23 @@ public class CaseSourceLocalReportTest {
     }
 
     private void verifyReportHeaderIsZero(ListingData listingData) {
-        AdhocReportType adhocReportType = listingData.getLocalReportsSummary().get(0).getValue();
-        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCases())?0:Integer.parseInt(adhocReportType.getEt1OnlineTotalCases()));
-        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCases())?0:Integer.parseInt(adhocReportType.getMigratedTotalCases()));
-        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getEccTotalCases())?0:Integer.parseInt(adhocReportType.getEccTotalCases()));
-        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCases())?0:Integer.parseInt(adhocReportType.getManuallyCreatedTotalCases()));
-        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCasesPercent())?0.00:Float.parseFloat(adhocReportType.getManuallyCreatedTotalCasesPercent()), .00);
-        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCasesPercent())?0.00:Float.parseFloat(adhocReportType.getEt1OnlineTotalCasesPercent()),.00);
-        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCasesPercent())?0.00:Float.parseFloat(adhocReportType.getMigratedTotalCasesPercent()),.00);
-        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getEccTotalCasesPercent())?0.00:Float.parseFloat(adhocReportType.getEccTotalCasesPercent()),.00);
+        AdhocReportType adhocReportType = listingData.getLocalReportsSummary().getFirst().getValue();
+        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCases()) ? 0 :
+            Integer.parseInt(adhocReportType.getEt1OnlineTotalCases()));
+        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCases()) ? 0 :
+            Integer.parseInt(adhocReportType.getMigratedTotalCases()));
+        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getEccTotalCases()) ? 0 :
+            Integer.parseInt(adhocReportType.getEccTotalCases()));
+        assertEquals(0, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCases()) ? 0 :
+            Integer.parseInt(adhocReportType.getManuallyCreatedTotalCases()));
+        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCasesPercent()) ? 0.00 :
+            Float.parseFloat(adhocReportType.getManuallyCreatedTotalCasesPercent()), .00);
+        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCasesPercent()) ? 0.00 :
+            Float.parseFloat(adhocReportType.getEt1OnlineTotalCasesPercent()), .00);
+        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCasesPercent()) ? 0.00 :
+            Float.parseFloat(adhocReportType.getMigratedTotalCasesPercent()), .00);
+        assertEquals(0.00, Strings.isNullOrEmpty(adhocReportType.getEccTotalCasesPercent()) ? 0.00 :
+            Float.parseFloat(adhocReportType.getEccTotalCasesPercent()), .00);
 
     }
 
@@ -55,33 +63,34 @@ public class CaseSourceLocalReportTest {
         listingDetails.setCaseData(listingData);
 
         List<SubmitEvent> submitEvents = new ArrayList<>();
-        submitEvents.add(createSubmitEvent( "1970-04-01", MANUALLY_CREATED_POSITION));
-        submitEvents.add(createSubmitEvent( "1970-04-02", MIGRATION_CASE_SOURCE));
-        submitEvents.add(createSubmitEvent( "1970-04-03", ET1_ONLINE_CASE_SOURCE));
-        submitEvents.add(createSubmitEvent( "1970-04-04", FLAG_ECC));
+        submitEvents.add(createSubmitEvent("1970-04-01", MANUALLY_CREATED_POSITION));
+        submitEvents.add(createSubmitEvent("1970-04-02", MIGRATION_CASE_SOURCE));
+        submitEvents.add(createSubmitEvent("1970-04-03", ET1_ONLINE_CASE_SOURCE));
+        submitEvents.add(createSubmitEvent("1970-04-04", FLAG_ECC));
 
         CaseSourceLocalReport caseSourceLocalReport = new CaseSourceLocalReport();
         ListingData reportListingData = caseSourceLocalReport.generateReportData(listingDetails, submitEvents);
 
-        AdhocReportType adhocReportType = reportListingData.getLocalReportsSummary().get(0).getValue();
-        assertEquals(4, Strings.isNullOrEmpty(adhocReportType.getTotalCases())?0:Integer.parseInt(
-                adhocReportType.getTotalCases()));
-        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCases())?0:Integer.parseInt(
-                adhocReportType.getMigratedTotalCases()));
-        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getEccTotalCases())?0:Integer.parseInt(
-                adhocReportType.getEccTotalCases()));
-        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCases())?0:Integer.parseInt(
-                adhocReportType.getManuallyCreatedTotalCases()));
-        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCases())?0:Integer.parseInt(
-                adhocReportType.getEt1OnlineTotalCases()));
-        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCasesPercent())?0:Float.parseFloat(
-                adhocReportType.getManuallyCreatedTotalCasesPercent()), .00);
-        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCasesPercent())?0:Float.parseFloat(
-                adhocReportType.getEt1OnlineTotalCasesPercent()), .00);
-        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getEccTotalCasesPercent())?0:Float.parseFloat(
-                adhocReportType.getEccTotalCasesPercent()), .00);
-        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCasesPercent())?0:Float.parseFloat(
-                adhocReportType.getMigratedTotalCasesPercent()), .00);
+        AdhocReportType adhocReportType = reportListingData.getLocalReportsSummary().getFirst().getValue();
+        assertEquals(4, Strings.isNullOrEmpty(adhocReportType.getTotalCases()) ? 0 : Integer.parseInt(
+            adhocReportType.getTotalCases()));
+        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCases()) ? 0 : Integer.parseInt(
+            adhocReportType.getMigratedTotalCases()));
+        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getEccTotalCases()) ? 0 : Integer.parseInt(
+            adhocReportType.getEccTotalCases()));
+        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCases()) ? 0 : Integer.parseInt(
+            adhocReportType.getManuallyCreatedTotalCases()));
+        assertEquals(1, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCases()) ? 0 : Integer.parseInt(
+            adhocReportType.getEt1OnlineTotalCases()));
+        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getManuallyCreatedTotalCasesPercent()) ? 0 :
+            Float.parseFloat(
+            adhocReportType.getManuallyCreatedTotalCasesPercent()), .00);
+        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getEt1OnlineTotalCasesPercent()) ? 0 : Float.parseFloat(
+            adhocReportType.getEt1OnlineTotalCasesPercent()), .00);
+        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getEccTotalCasesPercent()) ? 0 : Float.parseFloat(
+            adhocReportType.getEccTotalCasesPercent()), .00);
+        assertEquals(25, Strings.isNullOrEmpty(adhocReportType.getMigratedTotalCasesPercent()) ? 0 : Float.parseFloat(
+            adhocReportType.getMigratedTotalCasesPercent()), .00);
     }
 
     private SubmitEvent createSubmitEvent(String receiptDate, String caseSource) {
