@@ -31,7 +31,7 @@ public class HearingsToJudgmentsCcdReportDataSourceTest {
 
         var results = ccdReportDataSource.getData(caseTypeId, fromDate, toDate);
         assertEquals(1, results.size());
-        assertEquals(submitEvent, results.get(0));
+        assertEquals(submitEvent, results.getFirst());
     }
 
     @Test(expected = ReportException.class)
