@@ -23,9 +23,9 @@ class CaseCloseValidatorTest {
     private CaseData caseData;
 
     @BeforeEach
-    public void setup() throws Exception {
+    void setup() throws Exception {
         caseCloseValidator = new CaseCloseValidator();
-        CaseDetails caseDetails = generateCaseDetails("caseDetailsTest1.json");
+        CaseDetails caseDetails = generateCaseDetails();
         caseData = caseDetails.getCaseData();
     }
 
@@ -34,7 +34,7 @@ class CaseCloseValidatorTest {
         caseData.setPositionType(CASE_CLOSED_POSITION);
         List<String> errors = caseCloseValidator.validateReinstateClosedCaseMidEvent(caseData);
         assertEquals(1, errors.size());
-        assertEquals(REINSTATE_CANNOT_CASE_CLOSED_ERROR_MESSAGE, errors.get(0));
+        assertEquals(REINSTATE_CANNOT_CASE_CLOSED_ERROR_MESSAGE, errors.getFirst());
     }
 
     @Test
@@ -47,7 +47,7 @@ class CaseCloseValidatorTest {
     @Test
     void shouldValidateBfActionsForCaseCloseEvent_AllCleared_Pass() {
         caseData.setBfActions(BFHelperTest.generateBFActionTypeItems());
-        caseData.getBfActions().get(0).getValue().setCleared("2022-02-22");
+        caseData.getBfActions().getFirst().getValue().setCleared("2022-02-22");
         List<String> errors = CaseCloseValidator.validateBfActionsForCaseCloseEvent(caseData);
         assertEquals(0, errors.size());
     }
@@ -55,10 +55,11 @@ class CaseCloseValidatorTest {
     @Test
     void shouldValidateBfActionsForCaseCloseEvent_NotCleared_Error() {
         caseData.setBfActions(BFHelperTest.generateBFActionTypeItems());
-        caseData.getBfActions().get(0).getValue().setCleared(null);
+        caseData.getBfActions().getFirst().getValue().setCleared(null);
         List<String> errors = CaseCloseValidator.validateBfActionsForCaseCloseEvent(caseData);
         assertEquals(1, errors.size());
-        assertEquals(String.format(CLOSING_CASE_WITH_BF_OPEN_ERROR, caseData.getEthosCaseReference()), errors.get(0));
+        assertEquals(String.format(CLOSING_CASE_WITH_BF_OPEN_ERROR, caseData.getEthosCaseReference()),
+            errors.getFirst());
     }
 
     @Test
@@ -68,9 +69,9 @@ class CaseCloseValidatorTest {
         assertEquals(0, errors.size());
     }
 
-    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
+    private CaseDetails generateCaseDetails() throws Exception {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(getClass().getClassLoader()
-                .getResource(jsonFileName)).toURI())));
+                .getResource("caseDetailsTest1.json")).toURI())));
         ObjectMapper mapper = new ObjectMapper();
         return mapper.readValue(json, CaseDetails.class);
     }
